--- a/.github/workflows/great_work.yml
+++ b/.github/workflows/great_work.yml
@@ -17,6 +17,11 @@ jobs:
       uses: "actions/bin/filter@master"
       with:
         args: merged true
+    - uses: actions/github-script@0.2.0
+      with:
+        github-token: ${{github.token}}
+        script: |
+          github.issues.createComment({...context.issue, body: '👋 Thanks for your efforts!'})
     - name: echo-great-work
       run: |
         echo Great Work
