--- a/.github/workflows/great_work.yml
+++ b/.github/workflows/great_work.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/github-script@0.2.0
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.github_token }}
         script: |
           github.issues.createComment({...context.issue, body: '👋 Thanks for your efforts!'})
       if: github.event.pull_request.merged
